# Research-Assistant

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  report.json
agents/: graph.py  mcp_client.py  mcp_server.py  multi.py
api/: main.py  providers.py  threads.py
api/static/: app.js  index.html  styles.css
docs/superpowers/plans/: 2026-07-04-paper-research-assistant.md  2026-07-06-phase-2-retrieval-and-agents.md  2026-07-07-phase-3-local-llm.md  2026-07-08-phase-4-provider-toggle-and-ux.md  2026-07-10-phase-5-corrective-rag-faithfulness.md  2026-07-12-phase-6-synthetic-eval-and-cis.md  2026-07-12-phase-7-judge-calibration.md  2026-07-13-phase-8-ui-ux-refresh.md
docs/superpowers/specs/: 2026-07-04-paper-research-assistant-design.md  2026-07-06-phase-2-retrieval-and-agents-design.md  2026-07-07-phase-3-local-llm-design.md  (+5 more)
eval/: calibrate.py  generate.py  golden-synthetic.json  golden.json  judge.py  metrics.py  run.py  stats.py
llm/: anthropic_client.py  base.py  local_client.py  openai_client.py  prompts.py
rag/: answer.py  arxiv_client.py  chunk.py  embed.py  faithfulness.py  grade.py  ingest.py  migrate.py  parse.py  rerank.py  retrieve.py  rewrite.py  sparse.py  store.py
tests/: test_api.py  test_api_stream.py  test_arxiv_client.py  test_calibrate.py  test_chunk.py  test_client_config.py  test_config.py  test_embed.py  test_eval_run.py  test_faithfulness.py  test_generate.py  test_grade.py  test_graph.py  test_ingest.py  test_integration_agent.py  test_integration_arxiv.py  test_integration_eval.py  test_integration_mcp.py  test_integration_phase2.py  test_integration_rag.py  test_judge.py  test_llm_base.py  test_llm_stream.py  test_llm_tools.py  test_local_calibrate.py  test_local_generate.py  test_local_grade.py  test_local_llm.py  test_mcp_client.py  test_mcp_server.py  test_metrics.py  test_migrate.py  test_multi.py  test_openai_adapter.py  test_parse.py  test_prompts.py  test_providers.py  test_rerank.py  test_retrieve_answer.py  test_rewrite.py  (+4 more)
