[project]
name = "paper-research-assistant"
version = "0.1.0"
description = "Learning project: LLM APIs, RAG, evaluation, agents + MCP"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.60",
    "openai>=1.60",
    "qdrant-client>=1.12",
    "langgraph>=0.2",
    "mcp>=1.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-settings>=2.5",
    "pypdf>=5.0",
    "arxiv>=2.1",
    "tiktoken>=0.8",
    "requests>=2.32",
    "fastembed>=0.6",
    "langgraph-checkpoint-sqlite>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
markers = [
    "integration: needs real API keys and a running Qdrant; run with `pytest -m integration`",
    "local: needs a running Ollama server (no API keys); run with `pytest -m local`",
]
addopts = "-m 'not integration and not local'"
asyncio_mode = "auto"
filterwarnings = [
    # fastapi's TestClient still imports the deprecated httpx-based starlette
    # testclient; nothing to fix on our side until fastapi migrates to httpx2.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
